fixing the alignment of contact page

--- a/Day 7/Portfolio/css/contact.css
+++ b/Day 7/Portfolio/css/contact.css
@@ -93,6 +93,7 @@
       justify-self: center;
       width: 100%;
       text-align: left;
+      padding-left: 5%;
    }
    .contact-form input{
       width: 90%;
@@ -104,9 +105,6 @@
       margin: 2%;
       width: 100%;
       align-items: center;
-   }
-   .contact-main-left{
-      padding-left: 2%;
    }
    .contact-form textarea{
       max-height: 180px;
